--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,42 @@
 
 h1 {
     text-align: center;
-    margin: 2em 4em 10em 4em;
+    padding-top: 3em;
+    color: antiquewhite;
+    font-size: 3em;
+    
+
+   
 }
 
 h2 {
-    text-align: center;
+    text-align: left;
+    font-size: 1.5em;
+    padding-bottom: 8em;
+    padding-left: 1.5em;
 }
+
+.container img {
+    height: 6em;
+    width: 8em;
+    
+}
+
+.html {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.splash {
+    height: 50em;
+    width: 100%;
+    background-image: url(../maddies-blog/assets/png/dog_maddie.png);
+    background-position: 0% 80%;
+}
+
+.main {
+    overflow: auto;
+    background-color: whitesmoke;
+    background-size: cover;
+    background-blend-mode: color;
+}
+    
