--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,27 @@
     flex: 1;
 }
 
-h1 {
+h3 {
+    color: antiquewhite;
+    font-size: 1.5em;
     text-align: center;
-    padding-top: 3em;
+
+}
+
+.header {
+    background-color: lightblue;
+    overflow: auto;
+}
+
+h1 {
     color: antiquewhite;
     font-size: 3em;
+}
+    
     
 
    
-}
+
 
 h2 {
     text-align: left;
@@ -33,13 +45,26 @@ h2 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.splash {
-    height: 50em;
-    width: 100%;
-    background-image: url(../maddies-blog/assets/png/dog_maddie.png);
-    background-position: 0% 80%;
-    background-size: cover;
+.splashcontainer {
+    display: flex;
+    flex-flow: row wrap;
+    
 }
+
+.splashcontainer div {
+    flex: 1;
+}
+
+.splashcontainer img {
+    max-width: 100%;
+    min-width: 400px;
+}
+
+
+
+
+
+
 
 .main {
     overflow: auto;
