--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,25 @@
 .container {
     display: flex;
     text-align: center;
+    
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+    .splashcontainer {
+        flex-direction: column;
+    }
+    .titlebox {
+        margin-top: 0em;
+    }
 }
 .container div {
     flex: 1;
 }
 
-h3 {
+h4 {
     color: antiquewhite;
     font-size: 1.5em;
     text-align: center;
@@ -24,7 +37,12 @@ h1 {
     color: antiquewhite;
     font-size: 5em;
     margin-top: 0%;
-    margin-bottom: 0%;
+    margin-bottom: -.35em;
+    
+}
+
+.titlebox {
+    margin-bottom: 1em;
 }
     
     
@@ -33,10 +51,11 @@ h1 {
 
 
 h2 {
-    text-align: left;
+    text-align: center;
     font-size: 1.5em;
-    padding-bottom: 8em;
+    padding-bottom: 4em;
     padding-left: 1.5em;
+    color: lightblue;
 }
 
 .container img {
@@ -51,7 +70,7 @@ h2 {
 
 .splashcontainer {
     display: flex;
-    flex-flow: row wrap;
+    
     
 }
 
@@ -67,6 +86,23 @@ h2 {
 .titlebox {
     padding-top: 15%;
     padding-left: 2em;
+    
+}
+
+@media (min-width: 768px) {
+    .titlebox {
+        padding-top: 15%;
+    }
+}
+
+@media (max-width: 768px) {
+    .titlebox {
+        padding-top: 0.5em;
+    }
+}
+
+h3 {
+    color: lightblue;
 }
 
 
@@ -79,7 +115,7 @@ h2 {
 
 .main {
     overflow: auto;
-    background-color: whitesmoke;
+    background-color: antiquewhite;
     background-size: cover;
     background-blend-mode: color;
 }
