--- a/styles.css
+++ b/styles.css
@@ -51,10 +51,10 @@ h1 {
 
 
 h2 {
-    text-align: center;
+    text-align: left;
     font-size: 1.5em;
-    padding-bottom: 4em;
-    padding-left: 1.5em;
+    padding-bottom: 2em;
+    padding-left: .5em;
     color: lightblue;
 }
 
@@ -70,6 +70,7 @@ h2 {
 
 .splashcontainer {
     display: flex;
+    align-items: center;
     
     
 }
