--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+}
+
+
 .container {
     display: flex;
     text-align: center;
@@ -19,19 +24,57 @@
     flex: 1;
 }
 
-h4 {
+.header h4 {
+   
     color: antiquewhite;
     font-size: 1.5em;
-    text-align: center;
-
+   
 }
+
+.headerTitle {
+    flex: 33%;
+    text-align: center;
+}
+
+.emptyBox {
+    flex: 33%;
+}
+
+
 
 .header {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    position: fixed;
     background-color: lightblue;
     overflow: auto;
-    position: fixed;
     width: 100%;
+    height: 6em;
 }
+
+.navbar {
+    list-style-type: none;
+    flex: 33%;
+
+    
+}
+
+.navbar li {
+    display: inline ;
+}
+
+
+
+.navbar li a {
+    vertical-align: middle;
+    padding: 8px;
+}
+
+
+
+
+
 
 h1 {
     color: antiquewhite;
