--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
 .header h4 {
    
     color: antiquewhite;
-    font-size: 1.5em;
+    font-size: 22px;
    
 }
 
@@ -51,25 +51,44 @@ body {
     overflow: auto;
     width: 100%;
     height: 6em;
+    align-items: center;
 }
 
-.navbar {
+nav {
     list-style-type: none;
     flex: 33%;
-
-    
 }
 
-.navbar li {
+.navSmall {
+    flex: 33%;
+    padding-left: 10px;
+}
+
+@media (max-width: 900px) {
+    nav {
+        display: none;
+    }
+    .navSmall {
+        display: block;
+    }
+}
+
+@media (min-width: 900px) {
+    .navSmall {
+        display: none;
+    }
+}
+
+nav li {
     display: inline ;
+    text-align: center;
 }
 
 
 
-.navbar li a {
-    vertical-align: middle;
-    padding: 8px;
-}
+
+
+
 
 
 
