--- a/styles.css
+++ b/styles.css
@@ -48,10 +48,10 @@ body {
     display: flex;
     position: fixed;
     background-color: lightblue;
-    overflow: auto;
     width: 100%;
     height: 6em;
     align-items: center;
+    z-index: 2;
 }
 
 nav {
@@ -59,10 +59,55 @@ nav {
     flex: 33%;
 }
 
-.navSmall {
+.emptyBox1 {
+    
     flex: 33%;
-    padding-left: 10px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
+
+.navSmall {
+    position: relative;
+    width: 75px;
+    height: 100%
+}
+
+.navSmall:after {
+    content: "";
+    position: absolute;
+    border-right: 2px solid white;
+    top: 10px;
+    bottom: 10px;
+    right: 0px;
+}
+
+.dropbtn {
+    width: 75px;
+    height: 100%;
+    background-color: transparent;
+    border: none;
+     
+}
+
+.dropdownContent {
+    display: none;
+    position: absolute;
+    background-color: beige;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    width: 100px;
+}
+
+.dropdownContent a {
+    display: block;
+    padding: 12px 16px;
+    text-decoration: none;
+}
+
+.navSmall:hover .dropdownContent {display: block;}
+
+
+
 
 @media (max-width: 900px) {
     nav {
@@ -74,7 +119,7 @@ nav {
 }
 
 @media (min-width: 900px) {
-    .navSmall {
+    .emptyBox1 {
         display: none;
     }
 }
